2009-12-21  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        Test that dragging an SVG as <img> doesn't crash the browser.
        Note that this only works in debug mode as it's a failing assert.

        https://bugs.webkit.org/show_bug.cgi?id=32511

        * fast/images/drag-svg-as-image.html: Added.
        * platform/qt/Skipped: fast/images/drag-svg-as-image.html added.
2009-12-21  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Fix assertion failure when dragging an SVG image.
        https://bugs.webkit.org/show_bug.cgi?id=32511

        Test: fast/images/drag-svg-as-image.html

        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::filenameExtension): Return "svg"
        * svg/graphics/SVGImage.h:

Canonical link: https://commits.webkit.org/43861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52448 268f45cc-cd09-0410-ab3c-d52691b4dbfc