WebCore/svg/graphics/SVGImage.cpp
@@ -268,6 +268,11 @@ bool SVGImage::dataChanged(bool allDataReceived)
     return m_page;
 }
 
+String SVGImage::filenameExtension() const
+{
+    return "svg";
+}
+
 }
 
 #endif // ENABLE(SVG)
